@@ -73,6 +73,14 @@ SPVM::Test - SPVM test module
 
   sub main : int ($args : string[]) {
     {
+      my $i = 0;
+      switch ($i) {
+        case 1:
+          1;
+      }
+    }
+
+    {
       my $z1 : SPVM::Complex_2d;
       my $z2 : SPVM::Complex_2d;
       
